--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+server.port=8080
 
+spring.datasource.url=jdbc:mysql://localhost:3306/shop_kimkhi?ssl=false
+spring.datasource.username=root
+spring.datasource.password=hoanglanhl99
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.servlet.multipart.max-file-size = 20MB
+spring.servlet.multipart.max-request-size = 20MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=thaopham.ttp99@gmail.com
+spring.mail.password=hoanglanhl99
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#server.error.whitelabel.enabled=false
+
+#spring.social.facebook.appId=YOUR_APP_ID
+#spring.social.facebook.appSecret=YOUR_APP_SECRET
